made quiz work
